[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/ImageArts/play-button.png" type="Texture" id=2]
[ext_resource path="res://Assets/ImageArts/play_button-pressed.png" type="Texture" id=3]
[ext_resource path="res://Scripts/TransitionScreen/TransitionDay.gd" type="Script" id=4]
[ext_resource path="res://Resources/Fonts/new_dynamicfont.tres" type="DynamicFont" id=6]

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -12.0
margin_top = -2.0
margin_right = 1027.0
margin_bottom = 611.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IniciarDia" type="TextureButton" parent="."]
margin_left = 463.0
margin_top = 372.0
margin_right = 559.0
margin_bottom = 468.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="QueDiaEh" type="Label" parent="."]
margin_left = 296.0
margin_top = 234.0
margin_right = 666.0
margin_bottom = 448.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 6 )
text = "AAAA"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="IniciarDia" to="." method="_on_IniciarDia_button_down"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
